# api/v1/setting/entity.go
@@ -21,6 +21,8 @@ type Location struct {
 	ShelfID   int64     `db:"shelf_id" json:"shelf_id"`
 	SKU       string    `db:"sku" json:"sku"`
 	Capacity  int64     `db:"capacity" json:"capacity"`
+	Quantity  int64     `db:"quantity" json:"quantity"`
+	Available int64     `db:"available" json:"available"`
 	Unit      string    `db:"unit" json:"unit"`
 	Enabled   string    `db:"enabled" json:"enabled"`
 	Created   time.Time `db:"created" json:"created"`
